# libdkir

./: .gitignore  COPYING  README.md  meson.build  meson_options.txt
docs/: dkir-specs.md  meson.build
lib/: bootloaderinfo.vala  ir.vala  meson.build
